# travelhub

./: .dockerignore  .env.example  .flake8  .gitignore  2.2_tizim_arxitekturasi.txt  Dockerfile  Makefile  README.md  TODO  TravelHub_Detailed_TZ.md  docker-compose.yml  entrypoint.sh  kerak narsalar  mundarija  pyproject.toml  tahlil_full1.md
apps/: admin.py  ai_moderator.py  apps.py  context_processors.py  forms.py  signals.py  tasks.py  translation.py  urls.py  views.py
apps/fixtures/: activities.json  categories.json  cities.json  countries.json  destination.json  destinationimages.json  destinations.json  regions.json  tags.json
apps/migrations/: 0001_initial.py  0002_review_cleanliness_review_facilities_and_more.py  0003_destination_free_cancellation_hours.py  0004_alter_review_visited_at.py  0005_remove_user_type_user_role_alter_user_avatar.py  0006_alter_review_unique_together.py  0007_notificationsetting_notification.py  0008_review_likes.py  0009_destination_visible_reviews_count.py  0010_destinationtimeslot.py  0011_promocode.py  0012_booking.py  0013_booking_card_mask_booking_card_type_booking_notes_and_more.py  0014_alter_booking_booking_number.py  0015_alter_booking_payment_method.py  0016_alter_review_helpful_count.py  0017_country_region_alter_destination_city.py  0018_remove_city_region_city_country.py  0019_wishlist.py  0020_price_alert.py  0021_trip_plan.py  0022_add_destination_indexes.py  0023_booking_cancellation_fee_booking_cancelled_at_and_more.py  0024_backfill_booking_cancellation.py  (+3 more)
root/: celery.py  settings.py  urls.py
(+156 files in other folders)
