[project]
name = "travelhub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.8",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-ckeditor-5>=0.2.20",
    "django-jazzmin>=3.0.1",
    "django-mptt>=0.18.0",
    "django-rosetta>=0.10.3",
    "flower>=2.0.1",
    "geopy>=2.4.1",
    "google-generativeai>=0.8.6",
    "net-tools>=0.1.2",
    "phonenumbers>=9.0.25",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pycountry>=26.2.16",
    "redis>=7.4.0",
    "requests>=2.32.5",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "flake8>=7.3.0",
    "git-filter-repo>=2.47.0",
    "isort>=7.0.0",
    "python-dotenv>=1.2.1",
]
